<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <EditText
            android:id="@+id/edLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="77dp"
            android:ems="10" />

        <TextView
            android:id="@+id/tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edGenre"
            android:layout_alignLeft="@+id/edGenre"
            android:text="@string/desc_Length"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edLength"
            android:layout_alignLeft="@+id/edLength"
            android:layout_marginBottom="42dp"
            android:text="@string/desc_Title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edLength"
            android:layout_below="@+id/edLength"
            android:layout_marginTop="59dp"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edTitle"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="89dp"
            android:ems="10" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvLength"
            android:layout_below="@+id/edLength"
            android:layout_marginTop="34dp"
            android:text="@string/desc_Genre"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/tvLength"
            android:layout_marginBottom="25dp"
            android:onClick="onClear"
            android:text="@string/btn_Clear" />

        <Button
            android:id="@+id/btnHelpdesk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnClear"
            android:layout_alignBottom="@+id/btnClear"
            android:layout_alignRight="@+id/edGenre"
            android:onClick="onHelpdesk"
            android:text="@string/btn_Call" />

</RelativeLayout>